Added camera DeActiv ctn

--- a/index.html
+++ b/index.html
@@ -18,7 +18,12 @@
   <body>
     <br>   <br>   <br>   <br>
     <div class="ui">
-      <button onclick="toggleDoors()">🚪 Open/Close Doors</button>
+    <button id="door-btn" onclick="toggleDoors()">🚪 Open/Close Doors</button>
+
+
+
+      <button onclick="switchCameraView()">📷 Rear View</button>
+
       
       
 
