--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <title>Volvo 3D Viewer</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="img/favicon.ico" type="image/x-icon">
+
 
     <!-- ✅ Import Map لتحديد المسارات المحلية -->
     <script type="importmap">
@@ -16,13 +18,13 @@
     </script>
   </head>
   <body>
-    <br>   <br>   <br>   <br>
+    <br>   <br>   <br>   <br> <br>   <br>   <br>   
     <div class="ui">
-    <button id="door-btn" onclick="toggleDoors()">🚪 Open/Close Doors</button>
+    <button id="door-btn" onclick="toggleDoors()">Open/Close</button>
 
 
 
-      <button onclick="switchCameraView()">📷 Rear View</button>
+      <button onclick="switchCameraView()">Rear View</button>
 
       
       
