--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Volvo 3D Viewer</title>
+    <title>Car3D Viewer</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="img/favicon.ico" type="image/x-icon">
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
+   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+
 
 
 
@@ -32,23 +34,44 @@
 
 
 
-    <div class="ui">
-    <button id="door-btn" onclick="toggleDoors()">Open/Close</button>
-      <button onclick="switchCameraView()">View</button>
+<div class="ui">
+  <button id="door-btn" onclick="toggleDoors()">Open/Close</button>
+  <button onclick="switchCameraView()">View</button>
 
-      
-      
+  <div class="color-picker">
+    <div class="color" style="background:#2c2c2c;" onclick="changeColor('#2c2c2c')" title="Black Stone"></div>
+    <div class="color" style="background:#ffffff;" onclick="changeColor('#ffffff')" title="Ice White"></div>
+    <div class="color" style="background:#d3d3d3;" onclick="changeColor('#d3d3d3')" title="Bright Silver"></div>
+    <div class="color" style="background:#5e5e5e;" onclick="changeColor('#5e5e5e')" title="Thunder Grey"></div>
+    <div class="color" style="background:#0f3057;" onclick="changeColor('#0f3057')" title="Denim Blue"></div>
+    <div class="color" style="background:#a52a2a;" onclick="changeColor('#a52a2a')" title="Fusion Red"></div>
+    <div class="color" style="background:#123456;" onclick="changeColor('#123456')" title="Pine Grey"></div>
+  </div>
 
-      <div class="color-picker">
-        <div class="color" style="background:#2c2c2c;" onclick="changeColor('#2c2c2c')" title="Black Stone"></div>
-        <div class="color" style="background:#ffffff;" onclick="changeColor('#ffffff')" title="Ice White"></div>
-        <div class="color" style="background:#d3d3d3;" onclick="changeColor('#d3d3d3')" title="Bright Silver"></div>
-        <div class="color" style="background:#5e5e5e;" onclick="changeColor('#5e5e5e')" title="Thunder Grey"></div>
-        <div class="color" style="background:#0f3057;" onclick="changeColor('#0f3057')" title="Denim Blue"></div>
-        <div class="color" style="background:#a52a2a;" onclick="changeColor('#a52a2a')" title="Fusion Red"></div>
-        <div class="color" style="background:#123456;" onclick="changeColor('#123456')" title="Pine Grey"></div>
-      </div>
-    </div>
+  <!-- ✅ زر المعلومات -->
+<button class="info-btn" onclick="document.getElementById('about-panel').style.display='block'">
+  <i class="bi bi-info-circle"></i>
+</button>
+
+
+
+
+
+
+
+<!-- ✅ مربع المعلومات (خارج UI بس بيظهر فوق الصفحة) -->
+<div id="about-panel" style="display:none; position:fixed; top:10%; left:10%; width:80%; background:white; padding:20px; border-radius:10px; z-index:9999;">
+  <h3>About This Demo Project</h3>
+<p>This interactive showcase was developed using the Three.js library to demonstrate proficiency in 3D graphics and interactive web programming.</p>
+<p>The 3D car model has been customized and optimized solely for compatibility with the rendering engine. No official branding, logos, or proprietary content were used.</p>
+<p>This non-commercial project is intended exclusively for educational and demonstrative purposes. Redistribution or downloading of the model is not permitted.</p>
+<p>All trademarks and brands are the property of their respective owners.</p>
+  <button onclick="this.parentElement.style.display='none'">Cancel</button>
+</div>
+
+
+
+
 
     <!-- ✅ استدعاء ملف JavaScript كـ module -->
     <script type="module" src="./script.js"></script>
