--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <title>Car3D Viewer</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="img/favicon.ico" type="image/x-icon">
-   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
-   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+
+
 
 
 
@@ -22,6 +24,8 @@
       }
     </script>
   </head>
+
+  
   <body>
   
 <div id="loader">
@@ -35,8 +39,12 @@
 
 
 <div class="ui">
-  <button id="door-btn" onclick="toggleDoors()">Open/Close</button>
-  <button onclick="switchCameraView()">View</button>
+
+
+  <div class="ui-row">
+    <button id="door-btn" onclick="toggleDoors()">Open/Close</button>
+    <button onclick="switchCameraView()">View</button>
+  </div>
 
   <div class="color-picker">
     <div class="color" style="background:#2c2c2c;" onclick="changeColor('#2c2c2c')" title="Black Stone"></div>
@@ -60,7 +68,8 @@
 
 
 <!-- ✅ مربع المعلومات (خارج UI بس بيظهر فوق الصفحة) -->
-<div id="about-panel" style="display:none; position:fixed; top:10%; left:10%; width:80%; background:white; padding:20px; border-radius:10px; z-index:9999;">
+<div id="about-panel" style="display: none;">
+
   <h3>About This Demo Project</h3>
 <p>This interactive showcase was developed using the Three.js library to demonstrate proficiency in 3D graphics and interactive web programming.</p>
 <p>The 3D car model has been customized and optimized solely for compatibility with the rendering engine. No official branding, logos, or proprietary content were used.</p>
