--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 
   <div class="ui-row">
-    <button id="door-btn" onclick="toggleDoors()">Open/Close</button>
+    <button id="door-btn" onclick="toggleDoors()">Start</button>
     <button onclick="switchCameraView()">View</button>
   </div>
 
@@ -54,12 +54,14 @@
     <div class="color" style="background:#0f3057;" onclick="changeColor('#0f3057')" title="Denim Blue"></div>
     <div class="color" style="background:#a52a2a;" onclick="changeColor('#a52a2a')" title="Fusion Red"></div>
 
-  </div>
-
-  <!-- ✅ زر المعلومات -->
+      <!-- ✅ زر المعلومات -->
 <button class="info-btn" onclick="document.getElementById('about-panel').style.display='block'">
   <i class="bi bi-info-circle"></i>
 </button>
+
+  </div>
+
+
 
 
 
