--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
 
 
 
+
+
+
+
     <!-- ✅ Import Map لتحديد المسارات المحلية -->
     <script type="importmap">
       {
@@ -30,7 +34,8 @@
   
 <div id="loader">
   <div class="spinner-border text-secondary" role="status">
-    <span class="visually-hidden">Loading...</span>
+    <i class="bi bi-arrow-clockwise spinner-icon"></i>
+   
   </div>
 </div>
 
