--- a/index.html
+++ b/index.html
@@ -6,19 +6,9 @@
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="img/favicon.ico" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 
-
-
-
-
-
-
-
-
-
-
-    <!-- ✅ Import Map لتحديد المسارات المحلية -->
+    <!-- Import map to resolve local Three.js module paths -->
     <script type="importmap">
       {
         "imports": {
@@ -29,22 +19,15 @@
     </script>
   </head>
 
-  
   <body>
-  
+
 <div id="loader">
   <div class="spinner-border text-secondary" role="status">
     <i class="bi bi-arrow-clockwise spinner-icon"></i>
-   
   </div>
 </div>
 
-
-
-
-
 <div class="ui">
-
 
   <div class="ui-row">
     <button id="door-btn" onclick="toggleDoors()">Start</button>
@@ -59,37 +42,23 @@
     <div class="color" style="background:#0f3057;" onclick="changeColor('#0f3057')" title="Denim Blue"></div>
     <div class="color" style="background:#a52a2a;" onclick="changeColor('#a52a2a')" title="Fusion Red"></div>
 
-      <!-- ✅ زر المعلومات -->
-<button class="info-btn" onclick="document.getElementById('about-panel').style.display='block'">
-  <i class="bi bi-info-circle"></i>
-</button>
-
+    <button class="info-btn" onclick="document.getElementById('about-panel').style.display='block'">
+      <i class="bi bi-info-circle"></i>
+    </button>
   </div>
-
-
-
-
-
-
-
-
-
-<!-- ✅ مربع المعلومات (خارج UI بس بيظهر فوق الصفحة) -->
-<div id="about-panel" style="display: none;">
-
-  <h3>About This Demo Project</h3>
-<p>This interactive showcase was developed using the Three.js library to demonstrate proficiency in 3D graphics and interactive web programming.</p>
-<p>The 3D car model has been customized and optimized solely for compatibility with the rendering engine. No official branding, logos, or proprietary content were used.</p>
-<p>This non-commercial project is intended exclusively for educational and demonstrative purposes. Redistribution or downloading of the model is not permitted.</p>
-<p>All trademarks and brands are the property of their respective owners.</p>
-  <button onclick="this.parentElement.style.display='none'">Cancel</button>
 </div>
 
+<!-- About/info panel (hidden by default) -->
+<div id="about-panel" style="display: none;">
+  <h3>About This Demo Project</h3>
+  <p>This interactive showcase was developed using the Three.js library to demonstrate proficiency in 3D graphics and interactive web programming.</p>
+  <p>The 3D car model has been customized and optimized solely for compatibility with the rendering engine. No official branding, logos, or proprietary content were used.</p>
+  <p>This non-commercial project is intended exclusively for educational and demonstrative purposes. Redistribution or downloading of the model is not permitted.</p>
+  <p>All trademarks and brands are the property of their respective owners.</p>
+  <button onclick="this.parentElement.style.display='none'">Close</button>
+</div>
 
+<script type="module" src="./script.js"></script>
 
-
-
-    <!-- ✅ استدعاء ملف JavaScript كـ module -->
-    <script type="module" src="./script.js"></script>
-  </body>
+</body>
 </html>
